<resources>
    <string name="app_name">HasherProjectRev2</string>
    <string name="editText1">Input string\u2026</string>
    <string name="button1">HASH !</string>
    <string name="button2">Copy to Clipboard</string>
    <string name="button3">File\u2026</string>
    <string name="radioButton1">MD5</string>
    <string name="radioButton2">SHA-1</string>
    <string name="radioButton3">SHA-256</string>
    <string name="radioButton4">CRC-32</string>
    <string name="radioButton5">Adler32</string>
    <string name="textView1">Input a message to get a hashed string.</string>
    <string name="textView2">Case Sensitive.</string>
    <string name="textView3">STRING</string>
    <string name="textView4">FILE</string>
    <string name="textView5">Upload a file</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
